# polaris_studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
assets/: theme.qss
docs/: README.md
docs/architecture/: ai.md  graph-engine.md  ipc.md  overview.md  state.md
docs/developer/: adding-a-node.md  api-reference.md  setup.md  testing.md
docs/getting-started/: first-pipeline.md  installation.md  interface-tour.md  keyboard-shortcuts.md  quick-tour.md
docs/nodes/: reference.md
docs/reference/: design-system.md
docs/troubleshooting/: common-issues.md  faq.md
docs/user-guide/: ai-features.md  ai-panel.md  canvas.md  charts.md  command-palette.md  concepts.md  getting-started.md  node-reference.md  panels.md  saving-and-preferences.md  spreadsheet.md
src/polaris_studio/: __main__.py  main.py
src/polaris_studio/agent/: ai_backend.py  chat_session.py  command_pipeline.py  interpreter.py  schemas.py
src/polaris_studio/core/: engine.py  formatter.py  graph.py  node_registry.py  profiler.py
src/polaris_studio/io/: clipboard_handler.py  csv_handler.py  parquet_handler.py  xlsx_handler.py
src/polaris_studio/ipc/: protocol.py  worker.py
src/polaris_studio/state/: app_state.py  history.py  workspace.py
src/polaris_studio/ui/: command_palette.py  crash_diagnostics.py  main_window.py  motion.py  splash.py  status_bar.py  theme.py  view_mode.py
src/polaris_studio/ui/dialogs/: base_dialog.py  column_stats_dialog.py  conditional_fmt_editor.py  expression_editor.py  pivot_builder.py  settings_dialog.py
src/polaris_studio/ui/graph/: box_select_item.py  canvas.py  connection_drag.py  edge_item.py  layout_engine.py  minimap.py  node_item.py  port_item.py
src/polaris_studio/ui/panels/: ai_panel.py  chart_panel.py  node_palette.py  profile_panel.py  properties_panel.py  search_panel.py
src/polaris_studio/ui/spreadsheet/: cell_delegate.py  conditional_fmt.py  formula_bar.py  freeze_manager.py  grid_model.py  grid_view.py  header_view.py
tests/: test_agent.py  test_command_pipeline.py  test_engine.py  test_features.py  test_graph.py  test_io.py
