[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polaris-studio"
version = "1.0.3"
description = "A local-first, AI-native, node-powered data IDE"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Polaris Studio"}]
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "PySide6>=6.7.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.4.0"]

[project.scripts]
polaris-studio = "polaris_studio.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_studio"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*", "matplotlib", "matplotlib.*", "duckdb", "duckdb.*", "sqlalchemy", "sqlalchemy.*", "pandas", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polaris_studio.ui.crash_diagnostics"]
disable_error_code = ["valid-type"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:google.genai.types",
]

[tool.ruff]
line-length = 100
target-version = "py311"
